<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="?attr/popupTheme"
        tools:ignore="NewApi" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dev"
                style="@style/HeadlineTextStyle"
                android:text="@string/dev_infos" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_name" />

            <TextView
                android:id="@+id/enrico_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/enrico_gplus"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ivan" />

            <TextView
                android:id="@+id/ivan_git"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/ivan_gplus"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/credits"
                style="@style/HeadlineTextStyle"
                android:text="@string/credits" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stack" />

            <TextView
                android:id="@+id/stack_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lucas" />

            <TextView
                android:id="@+id/lucas_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/libs"
                style="@style/HeadlineTextStyle"
                android:text="@string/libs" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supportv4" />

            <TextView
                android:id="@+id/v4_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appcompat" />

            <TextView
                android:id="@+id/appcompat_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recycler" />

            <TextView
                android:id="@+id/recyclerView_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card" />

            <TextView
                android:id="@+id/card_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jsoup" />

            <TextView
                android:id="@+id/soup_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide" />

            <TextView
                android:id="@+id/glide_page"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/app_info"
                style="@style/HeadlineTextStyle"
                android:text="@string/application_info" />

            <TextView
                android:id="@+id/version"
                style="@style/SubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sources"
                style="@style/BodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
